--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/colors.scss";
+@use '../../styles/colors.scss' as colors;
 
 * {
   font-family: 'Roboto', sans-serif;
@@ -9,25 +9,25 @@
 }
 
 body {
-  background-color: $background;
+  background-color: colors.$background;
   color: #333;
 }
 
 input[type="password"],
 input[type="email"] {
-  border: 1px solid $primaryLight;
+  border: 1px solid colors.$primaryLight;
   line-height: 40px;
   border-radius: 4px;
 
   &:focus {
-    border: 1px solid $primaryLight;
+    border: 1px solid colors.$primaryLight;
     outline: none;
   }
 }
 
 button {
-  background-color: $primary;
-  color: $white;
+  background-color: colors.$primary;
+  color: colors.$white;
   border-radius: 8px;
   font-size: 16px;
   border: none;
@@ -44,35 +44,18 @@ button {
   justify-content: space-between;
   height: 100vh;
 
-  .header {
-    background-color: $primary;
-    display: flex;
-    flex-direction: column;
-    border-top: 40px solid $primaryDark;
-    align-items: center;
-
-    img {
-      margin-top: 40px;
-    }
-
-    h1 {
-      color: $white;
-      margin: 16px 0 40px;
-    }
-  }
-
   .form {
     display: flex;
     flex-direction: column;
-    width: 400px;
-    background-color: $white;
-    padding: 40px;
-    border-radius: 8px;
-    align-self: center;
-    box-shadow: 0 1px 3px -1px $black;
+  width: 400px;
+  background-color: colors.$white;
+  padding: 40px;
+  border-radius: 8px;
+  align-self: center;
+  box-shadow: 0 1px 3px -1px colors.$black;
   
     h2 {
-      color: $primaryDark;
+      color: colors.$primaryDark;
       text-align: center;
       font-size: 20px;
       text-transform: uppercase;
@@ -103,7 +86,7 @@ button {
 
     .link {
       text-align: center;
-      color: $primary;
+      color: colors.$primary;
       text-transform: lowercase;
       margin-top: 16px;
       cursor: pointer;
@@ -124,13 +107,13 @@ button {
 
       .error {
         margin-top: 30px;
-        color: $primaryLight;
+        color: colors.$primaryLight;
       }
     }
   }
 
   .footer {
-    background-color: $primary;
+    background-color: colors.$primary;
     height: 48px;
   }
 }
