--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -25,6 +25,16 @@
 
     .submit {
       margin-top: 32px;
+
+      &:disabled {
+        background-color: colors.$disabledBackground;
+        color: colors.$disabledColor;
+        cursor: not-allowed;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
 
     .link {
